--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,11 @@
 server:
-  port: 8080
+  port: 8085
 spring:
   cloud:
     gateway:
       routes:
         - id: micro1
-          uri: https://demo-openshift-git-marcoqrsof-dev.apps.sandbox-m3.1530.p1.openshiftapps.com
+          uri: https://demo-openshift-git-marcoqrsof-dev.apps.sandbox-m3.1530.p1.openshiftapps.com/
           predicates:
             - Path=/micro1/**
 
